Fix forum description text wrapping

--- a/app/static/css/forums.css
+++ b/app/static/css/forums.css
@@ -64,6 +64,11 @@
     font-size: 8.2pt;
 }
 
+.subforum-head img {
+    margin-bottom: 3px;
+    margin-top: 3px;
+}
+
 .subforum-stats {
     border-radius: 5px;
     padding: 4px;
